code admin order management module

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragments.html
@@ -124,5 +124,16 @@
     </th:block>
 </div>
 
+<div th:fragment="format_currency(amount)" th:remove="tag">
+    <span>[[${CURRENCY_SYMBOL}]] [[${amount}]]</span>
+</div>
+
+<div th:fragment="format_time(dateTime)" th:remove="tag">
+    <span th:text="${#dates.format(dateTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
+</div>
+<div th:fragment="currency_input(amount)" th:remove="tag">
+    <input type="text" readonly class="form-control" th:value="${ CURRENCY_SYMBOL + ' ' + amount}">
+</div>
+
 </body>
 </html>
