--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_shipping_read_only.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_shipping_read_only.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
+<html  xmlns:th="http://www.thymeleaf.org" lang="en">
 <body>
 <div th:fragment="content" th:remove="tag">
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">Length (inch):</label>
+		<label class="col-sm-2">Length (inch):</label>
 		<div class="col-sm-10">
 			<input type="text" step="0.1" class="form-control" th:value="${product.length}" readonly/>
 		</div>
 	</div>
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">Width (inch):</label>
+		<label class="col-sm-2">Width (inch):</label>
 		<div class="col-sm-10">
 			<input type="text" step="0.1" class="form-control" th:value="${product.width}" readonly/>
 		</div>
 	</div>		
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">Height (inch):</label>
+		<label class="col-sm-2">Height (inch):</label>
 		<div class="col-sm-10">
 			<input type="text" step="0.1" class="form-control" th:value="${product.height}" readonly/>
 		</div>
 	</div>		
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">Weight (pounds):</label>
+		<label class="col-sm-2">Weight (pounds):</label>
 		<div class="col-sm-10">
 			<input type="text" step="0.1" class="form-control" th:value="${product.weight}" readonly/>
 		</div>
