--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/customer/account_form.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/customer/account_form.html
@@ -20,14 +20,14 @@
 	</div>		
 	<div class="border border-secondary rounded p-3">
 		<div class="input-group row p-2">
-			<label for="email" class="col-sm-4 col-form-label">E-mail:</label>
+			<label for="email" class="col-sm-4">E-mail:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{email}" id="email" class="form-control" readonly="readonly"/>
 			</div>
 		</div>
 			
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">First Name:</label>
+			<label class="col-sm-4">First Name:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{firstName}" class="form-control"
 					required="required" maxlength="45" minlength="2" />
@@ -35,7 +35,7 @@
 		</div>
 		
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Last Name:</label>
+			<label class="col-sm-4">Last Name:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{lastName}" class="form-control"
 					required="required" maxlength="45" minlength="2" />
@@ -44,7 +44,7 @@
 				
 		<th:block th:if="${customer.authenticationType.name() == 'DATABASE'}">
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Password:</label>
+			<label class="col-sm-4">Password:</label>
 			<div class="col-sm-8">
 				<input type="password" th:field="*{password}" class="form-control"
 					maxlength="15" minlength="6" placeholder="Leave this field if you dont want to change your password"
@@ -53,7 +53,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Re-type Password:</label>
+			<label class="col-sm-4">Re-type Password:</label>
 			<div class="col-sm-8">
 				<input type="password" id="confirmPassword" class="form-control"
 					maxlength="15" minlength="6"
@@ -64,7 +64,7 @@
 		</th:block>
 		
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Phone Number:</label>
+			<label class="col-sm-4">Phone Number:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{phoneNumber}" class="form-control"
 					required="required" maxlength="15" minlength="8" />
@@ -72,7 +72,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Address Line 1:</label>
+			<label class="col-sm-4">Address Line 1:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{addressLine1}" class="form-control"
 					required="required" maxlength="64" minlength="3" />
@@ -80,7 +80,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Address Line 2:</label>
+			<label class="col-sm-4">Address Line 2:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{addressLine2}" class="form-control"
 					maxlength="64" />
@@ -88,7 +88,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">City:</label>
+			<label class="col-sm-4">City:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{city}" class="form-control"
 					maxlength="45" minlength="2" />
@@ -96,7 +96,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Country:</label>
+			<label class="col-sm-4">Country:</label>
 			<div class="col-sm-8">
 				<select class="form-control" th:field="*{country}">
 					<th:block th:each="country : ${listCountries}">
@@ -107,7 +107,7 @@
 		</div>
 				
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">State/Province:</label>
+			<label class="col-sm-4">State/Province:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{state}" class="form-control"
 					maxlength="45" minlength="3" list="listStates" />
@@ -116,7 +116,7 @@
 		</div>
 								
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Postal Code:</label>
+			<label class="col-sm-4">Postal Code:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{postalCode}" class="form-control"
 					maxlength="10" minlength="2" />
