--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands/brand_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/brands/brand_form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: page_head(${pageTitle})"></head>
 <body>
 <div class="container-fluid">
@@ -15,14 +15,14 @@
 		<input type="hidden" th:field="*{id}" />
 		<div class="border border-secondary rounded p-3">
 			<div class="input-group row p-3">
-				<label class="col-sm-4 col-form-label">Brand Name:</label>
+				<label class="col-sm-4">Brand Name:</label>
 				<div class="col-sm-8">
 					<input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="45"  />
 				</div>
 			</div>
 
 			<div class="input-group row p-3">
-				<label class="col-sm-4 col-form-label">Brand Logo:</label>
+				<label class="col-sm-4">Brand Logo:</label>
 				<div class="col-sm-8">
 					<input type="hidden" th:field="*{logo}" />
 					<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg"
@@ -37,7 +37,7 @@
 			</div>
 
 			<div class="input-group row p-3">
-				<label class="col-sm-4 col-form-label">Select one or more categories:</label>
+				<label class="col-sm-4">Select one or more categories:</label>
 				<div class="col-sm-8">
 					<select class="form-control" th:field="*{categories}" multiple required
 							style="resize: vertical; height: 200px">
@@ -50,7 +50,7 @@
 			</div>
 
 			<div class="input-group row p-3">
-				<label class="col-sm-4 col-form-label">Chosen categories:</label>
+				<label class="col-sm-4">Chosen categories:</label>
 				<div class="col-sm-8">
 					<div id="chosenCategories">
 					</div>
