--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/category_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/categories/category_form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: page_head(${pageTitle})" />
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="fragments :: page_head(${pageTitle})"></head>
 <body class="d-flex flex-column h-100">
 	<!--navigation-->
 	<div th:replace="navigation :: menu"></div>
@@ -16,21 +16,21 @@
 			<input type="hidden" th:field="*{id}" />
 			<div class="border border-secondary rounded p-3">
 				<div class="input-group row p-3">
-					<label class="col-sm-4 col-form-label">Category Name:</label>
+					<label class="col-sm-4">Category Name:</label>
 					<div class="col-sm-8">
 						<input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="128"  />
 					</div>
 				</div>
 
 				<div class="input-group row p-3">
-					<label class="col-sm-4 col-form-label">Alias:</label>
+					<label class="col-sm-4">Alias:</label>
 					<div class="col-sm-8">
 						<input type="text" class="form-control" th:field="*{alias}" required minlength="3" maxlength="64"  />
 					</div>
 				</div>
 
 				<div class="input-group row p-3">
-					<label class="col-sm-4 col-form-label">Parent Category:</label>
+					<label class="col-sm-4">Parent Category:</label>
 					<div class="col-sm-8">
 						<select class="form-control" th:field="*{parent}">
 							<option value="0">[No Parent]</option>
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="input-group row p-3">
-					<label class="col-sm-4 col-form-label">Image:</label>
+					<label class="col-sm-4">Image:</label>
 					<div class="col-sm-8">
 						<input type="hidden" th:field="*{image}" />
 						<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg"
