--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/customers/customer_detail_modal.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/customers/customer_detail_modal.html
@@ -17,42 +17,42 @@
 	<div class="tab-content" id="myTabContent">
 	  <div class="tab-pane fade show active p-3" id="general" role="tabpanel" aria-labelledby="general-tab">
 		  <div class="input-group row p-2">
-		    <label for="id" class="col-sm-4 col-form-label">Customer ID:</label>
+		    <label for="id" class="col-sm-4">Customer ID:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="id" readonly class="form-control" th:value="${customer.id}" />
 		    </div>
 		  </div>
 		  
 		  <div class="input-group row p-2">
-		    <label for="name" class="col-sm-4 col-form-label">Full Name:</label>
+		    <label for="name" class="col-sm-4">Full Name:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id = "name" readonly class="form-control" th:value="${customer.fullName}" />
 		    </div>
 		  </div>
 		  
 		  <div class="input-group row p-2">
-		    <label for="email" class="col-sm-4 col-form-label">E-mail:</label>
+		    <label for="email" class="col-sm-4">E-mail:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="email" readonly class="form-control" th:value="${customer.email}" />
 		    </div>
 		  </div>  
 		  
 		  <div class="input-group row p-2">
-		    <label for="phone" class="col-sm-4 col-form-label">Phone Number:</label>
+		    <label for="phone" class="col-sm-4">Phone Number:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="phone" readonly class="form-control" th:value="${customer.phoneNumber}" />
 		    </div>
 		  </div> 
 		  
 		  <div class="input-group row p-2">
-		    <label for="enabled" class="col-sm-4 col-form-label">Enabled:</label>
+		    <label for="enabled" class="col-sm-4">Enabled:</label>
 		    <div class="col-sm-8">
 		      <input type="checkbox" id="enabled" th:checked="${customer.enabled}" disabled="disabled" />
 		    </div>
 		  </div>
 		  
 		  <div class="input-group row p-2">
-		    <label for="createdTime"  class="col-sm-4 col-form-label">Created Time:</label>
+		    <label for="createdTime"  class="col-sm-4">Created Time:</label>
 		    <div class="col-sm-8">
 		      <span id="createdTime" th:text="${#dates.format(customer.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
 		    </div>
@@ -61,42 +61,42 @@
 	  
 	  <div class="tab-pane fade show p-3" id="address" role="tabpanel" aria-labelledby="address-tab">
 		  <div class="input-group row p-2">
-		    <label for="address1" class="col-sm-4 col-form-label">Address Line 1:</label>
+		    <label for="address1" class="col-sm-4">Address Line 1:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="address1" readonly class="form-control" th:value="${customer.addressLine1}" />
 		    </div>
 		  </div>
 		  
 		  <div class="input-group row p-2">
-		    <label for="address2" class="col-sm-4 col-form-label">Address Line 2:</label>
+		    <label for="address2" class="col-sm-4">Address Line 2:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="address2" readonly class="form-control" th:value="${customer.addressLine2}" />
 		    </div>
 		  </div>
 		  
 		  <div class="input-group row p-2">
-		    <label for="city" class="col-sm-4 col-form-label">City:</label>
+		    <label for="city" class="col-sm-4">City:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="city" readonly class="form-control" th:value="${customer.city}" />
 		    </div>
 		  </div>
 		  
 		  <div class="input-group row p-2">
-		    <label for="state" class="col-sm-4 col-form-label">State/Province:</label>
+		    <label for="state" class="col-sm-4">State/Province:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="state" readonly class="form-control" th:value="${customer.state}" />
 		    </div>
 		  </div>
 		  
 		  <div class="input-group row p-2">
-		    <label for="country" class="col-sm-4 col-form-label">Country:</label>
+		    <label for="country" class="col-sm-4">Country:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="country" readonly class="form-control" th:value="${customer.country.name}" />
 		    </div>
 		  </div>        
 		
 		  <div class="input-group row p-2">
-		    <label for="postal" class="col-sm-4 col-form-label">Postal Code:</label>
+		    <label for="postal" class="col-sm-4">Postal Code:</label>
 		    <div class="col-sm-8">
 		      <input type="text" id="postal" readonly class="form-control" th:value="${customer.postalCode}" />
 		    </div>
