--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/customers/customer_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/customers/customer_form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: page_head(${pageTitle})"></head>
 <body>
 <div class="container-fluid">
@@ -16,61 +16,61 @@
 		<input type="hidden" th:field="*{id}" />
 	<div class="border border-secondary rounded p-3">
 	  <div class="input-group row p-2">
-	    <label for="firstName" class="col-sm-4 col-form-label">First Name:</label>
+	    <label for="firstName" class="col-sm-4">First Name:</label>
 	    <div class="col-sm-8">
 	      <input type="text" class="form-control" id="firstName" th:field="*{firstName}" required minlength="2" maxlength="45">
 	    </div>
 	  </div>
 	  <div class="input-group row p-2">
-	    <label for="lastName" class="col-sm-4 col-form-label">Last Name:</label>
+	    <label for="lastName" class="col-sm-4">Last Name:</label>
 	    <div class="col-sm-8">
 	      <input type="text" class="form-control" id="lastName" th:field="*{lastName}" required minlength="2" maxlength="45">
 	    </div>
 	  </div>	  
 	  
 	  <div class="input-group row p-2">
-	    <label for="email" class="col-sm-4 col-form-label">E-mail:</label>
+	    <label for="email" class="col-sm-4">E-mail:</label>
 	    <div class="col-sm-8">
 			<input type="email" class="form-control bg-light" id="email"  th:field="*{email}" readonly  minlength="10" maxlength="45">
 	    </div>
 	  </div>
 
 		<div class="input-group row p-2">
-			<label for="password" class="col-sm-4 col-form-label">Password:</label>
+			<label for="password" class="col-sm-4">Password:</label>
 			<div class="col-sm-8">
 				<input type="password" class="form-control bg-light" id = "password" th:field="*{password}" readonly  minlength="6" maxlength="45" placeholder="Cannot change customer password ">
 			</div>
 		</div>
 	  <div class="input-group row p-2">
-	    <label for="phoneNumber" class="col-sm-4 col-form-label">Phone Number:</label>
+	    <label for="phoneNumber" class="col-sm-4">Phone Number:</label>
 	    <div class="col-sm-8">
 	      <input type="text" class="form-control bg-light" id="phoneNumber" th:field="*{phoneNumber}" readonly  minlength="9" maxlength="12">
 	    </div>
 	  </div>
 	  
 	  <div class="input-group row p-2">
-	    <label for="addressLine1" class="col-sm-4 col-form-label">Address Line 1:</label>
+	    <label for="addressLine1" class="col-sm-4">Address Line 1:</label>
 	    <div class="col-sm-8">
 	      <input type="text" class="form-control" id="addressLine1" th:field="*{addressLine1}" required minlength="9" maxlength="64">
 	    </div>
 	  </div>
 	  
 	  <div class="input-group row p-2">
-	    <label for="addressLine2" class="col-sm-4 col-form-label">Address Line 2:</label>
+	    <label for="addressLine2" class="col-sm-4">Address Line 2:</label>
 	    <div class="col-sm-8">
 	      <input type="text" class="form-control" id="addressLine2" th:field="*{addressLine2}" maxlength="64">
 	    </div>
 	  </div>
 
 	  <div class="input-group row p-2">
-	    <label for="city" class="col-sm-4 col-form-label">City:</label>
+	    <label for="city" class="col-sm-4">City:</label>
 	    <div class="col-sm-8">
 	      <input type="text" class="form-control" id="city" th:field="*{city}" required minlength="3" maxlength="64">
 	    </div>
 	  </div>
 	  			  
 	  <div class="input-group row p-2">
-	    <label for="country" class="col-sm-4 col-form-label">Country:</label>
+	    <label for="country" class="col-sm-4">Country:</label>
 	    <div class="col-sm-8">
 	      <select th:field="*{country}" class="form-control">
 	      	<option th:each="country : ${listCountries}" id="country" th:value="${country.id}">[[${country.name}]]</option>
@@ -79,7 +79,7 @@
 	  </div>
 	  
 	  <div class="input-group row p-2">
-	    <label for="state" class="col-sm-4 col-form-label">State/Province:</label>
+	    <label for="state" class="col-sm-4">State/Province:</label>
 	    <div class="col-sm-8">
 	    	<input type="text" class="form-control" id="state" th:field="*{state}" minlength="3" maxlength="64" list="listStates">
 	      <datalist id="listStates">
@@ -89,7 +89,7 @@
 	  </div>
 	  
 	  <div class="input-group row p-2">
-	    <label for="postalCode" class="col-sm-4 col-form-label">Postal Code:</label>
+	    <label for="postalCode" class="col-sm-4">Postal Code:</label>
 	    <div class="col-sm-8">
 	      <input type="text" class="form-control" id="postalCode" th:field="*{postalCode}" required minlength="3" maxlength="6">
 	    </div>
