--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_shipping.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/products/product_shipping.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
+<html  xmlns:th="http://www.thymeleaf.org" lang="en">
 <body>
 <div th:fragment="content" th:remove="tag">
 	<div class="input-group row p-2">
@@ -8,28 +8,28 @@
 	</div>	
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">Length (centimetres):</label>
+		<label class="col-sm-2">Length (centimetres):</label>
 		<div class="col-sm-10">
 			<input type="number" step="0.1" class="form-control" th:field="*{length}"/>
 		</div>
 	</div>	
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">Width (centimetres):</label>
+		<label class="col-sm-2">Width (centimetres):</label>
 		<div class="col-sm-10">
 			<input type="number" step="0.1" class="form-control" th:field="*{width}"/>
 		</div>
 	</div>	
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">Height (centimetres):</label>
+		<label class="col-sm-2">Height (centimetres):</label>
 		<div class="col-sm-10">
 			<input type="number" step="0.1" class="form-control" th:field="*{height}"/>
 		</div>
 	</div>	
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">Weight (kilograms):</label>
+		<label class="col-sm-2">Weight (kilograms):</label>
 		<div class="col-sm-10">
 			<input type="number" step="0.1" class="form-control" th:field="*{weight}"/>
 		</div>
