--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/mail_server.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/mail_server.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <body>
 <div th:fragment="content" th:remove="tag">
 	<form th:action="@{/settings/save_mail_server}" method="post">
 	<div class="input-group row p-2">
-		<label class="col-sm-4 col-form-label">SMTP Server Host Name:</label>
+		<label class="col-sm-4">SMTP Server Host Name:</label>
 		<div class="col-sm-8">
 			<input type="text" class="form-control" name="MAIL_HOST" 
 				th:value="${MAIL_HOST}" required  />
@@ -12,7 +12,7 @@
 	</div>	
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-4 col-form-label">Port Number:</label>
+		<label class="col-sm-4">Port Number:</label>
 		<div class="col-sm-8">
 			<input type="text" class="form-control" name="MAIL_PORT" 
 				th:value="${MAIL_PORT}" required  />
@@ -20,7 +20,7 @@
 	</div>
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-4 col-form-label">Username:</label>
+		<label class="col-sm-4">Username:</label>
 		<div class="col-sm-8">
 			<input type="text" class="form-control" name="MAIL_USERNAME" 
 				th:value="${MAIL_USERNAME}" required  />
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="input-group row p-2">
-		<label class="col-sm-4 col-form-label">Password:</label>
+		<label class="col-sm-4">Password:</label>
 		<div class="col-sm-8">
 			<input type="text" class="form-control" name="MAIL_PASSWORD" 
 				th:value="${MAIL_PASSWORD}" required  />
@@ -36,7 +36,7 @@
 	</div>
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-4 col-form-label">Server Authentication Required:</label>
+		<label class="col-sm-4">Server Authentication Required:</label>
 		<div class="col-sm-8">
 			<select name="SMTP_AUTH" class="form-control">
 				<option value="true" th:selected="(${SMTP_AUTH} == 'true')">True</option>
@@ -46,7 +46,7 @@
 	</div>
 
 	<div class="input-group row p-2">
-		<label class="col-sm-4 col-form-label">Server Requires Secured Connection (TLS):</label>
+		<label class="col-sm-4">Server Requires Secured Connection (TLS):</label>
 		<div class="col-sm-8">
 			<select name="SMTP_SECURED" class="form-control">
 				<option value="true" th:selected="(${SMTP_SECURED} == 'true')">True</option>
@@ -56,7 +56,7 @@
 	</div>
 
 	<div class="input-group row p-2">
-		<label class="col-sm-4 col-form-label">From E-mail Address:</label>
+		<label class="col-sm-4">From E-mail Address:</label>
 		<div class="col-sm-8">
 			<input type="text" class="form-control" name="MAIL_FROM" 
 				th:value="${MAIL_FROM}" required  />
@@ -64,7 +64,7 @@
 	</div>
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-4 col-form-label">Sender Name:</label>
+		<label class="col-sm-4">Sender Name:</label>
 		<div class="col-sm-8">
 			<input type="text" class="form-control" name="MAIL_SENDER_NAME" 
 				th:value="${MAIL_SENDER_NAME}" required  />
