--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/mail_templates/customer_verification.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/mail_templates/customer_verification.html
@@ -4,7 +4,7 @@
 <div th:fragment="content" th:remove="tag">
 	
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">E-mail Subject:</label>
+		<label class="col-sm-2">E-mail Subject:</label>
 		<div class="col-sm-10">
 			<input type="text" class="form-control" name="CUSTOMER_VERIFY_SUBJECT" 
 				th:value="${CUSTOMER_VERIFY_SUBJECT}" required  />
@@ -12,7 +12,7 @@
 	</div>	
 
 	<div class="input-group row p-2">
-		<label class="col-sm-2 col-form-label">E-mail Content:</label>
+		<label class="col-sm-2">E-mail Content:</label>
 		<div class="col-sm-10">
 			<textarea rows="5" name="CUSTOMER_VERIFY_CONTENT" id="customerVerificationContent">[[${CUSTOMER_VERIFY_CONTENT}]]</textarea>
 		</div>
