--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/states.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/states.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <body>
 <div th:fragment="content" th:remove="tag">
 	<div>
@@ -12,14 +12,14 @@
 		<input type="button" value="Load Country List" id="buttonLoadCountriesForStates" class="btn btn-primary m-2" />
 	</div>
 	<div class="input-group row">
-		<label class="col-sm-2 col-form-label">Selected Country:</label>
+		<label class="col-sm-2 ">Selected Country:</label>
 		<div class="col-sm-10">
 			<select class="form-control m-2" id="dropDownCountriesForStates">
 			</select>
 		</div>
 	</div>
 	<div class="input-group row">
-		<label class="col-sm-2 col-form-label">All States/Provinces:</label>
+		<label class="col-sm-2 ">All States/Provinces:</label>
 		<div class="col-sm-10">
 			<select class="form-control m-2" style="height: 300px" size="3" id="dropDownStates">
 			</select>
@@ -27,7 +27,7 @@
 	</div>
 	<form id="formState">
 		<div class="input-group row">
-			<label class="col-sm-2 col-form-label mt-2" id="labelStateName">State/Province Name:</label>
+			<label class="col-sm-2  mt-2" id="labelStateName">State/Province Name:</label>
 			<div class="col-sm-6">
 				<input type="text" class="form-control mt-2" id="fieldStateName" />
 			</div>
