--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/shipping_rates/shipping_rate_form.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/shipping_rates/shipping_rate_form.html
@@ -14,7 +14,7 @@
 		<input type="hidden" th:field="*{id}" />
 	<div class="border border-secondary rounded p-3">
 	  <div class="input-group row p-2">
-	    <label for="country" class="col-sm-4 col-form-label">Destination Country:</label>
+	    <label  class="col-sm-4">Destination Country:</label>
 	    <div class="col-sm-8">
 	      <select th:field="*{country}" class="form-control">
 	      	<option th:each="country : ${listCountries}" th:value="${country.id}">[[${country.name}]]</option>
@@ -23,7 +23,7 @@
 	  </div>
 	  
 	  <div class="input-group row p-2">
-	    <label for="state" class="col-sm-4 col-form-label">Destination State/Province:</label>
+	    <label  class="col-sm-4">Destination State/Province:</label>
 	    <div class="col-sm-8">
 	    	<input type="text" class="form-control" th:field="*{state}" 
 	    		minlength="3" maxlength="64" list="listStates" required> 
@@ -34,21 +34,21 @@
 	  </div>
 	  
 	  <div class="input-group row p-2">
-	    <label for="postalCode" class="col-sm-4 col-form-label">Shipping Rate :</label>
+	    <label  class="col-sm-4">Shipping Rate :</label>
 	    <div class="col-sm-8">
 	      <input type="number" class="form-control" th:field="*{rate}" required step="0.01" min="0">
 	    </div>
 	  </div>
 
 	  <div class="input-group row p-2">
-	    <label for="postalCode" class="col-sm-4 col-form-label">Days to deliver:</label>
+	    <label  class="col-sm-4">Days to deliver:</label>
 	    <div class="col-sm-8">
 	      <input type="number" class="form-control" th:field="*{days}" required step="1" min="0">
 	    </div>
 	  </div>
 	  	  
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Cash On Delivery (COD):</label>
+			<label class="col-sm-4">Cash On Delivery (COD):</label>
 			<div class="col-sm-8">
 				<input type="checkbox" th:field="*{codSupported}" />
 			</div>
