--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/address_book/addresses.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/address_book/addresses.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: page_head('Your Address Book')"></head>
 <body class="d-flex flex-column min-vh-100">
 <div class="container-fluid">
@@ -19,6 +19,13 @@
 					<div class="row">
 						<div class="col">
 							<b>Your Primary Address</b>
+							<th:block th:if="${usePrimaryAddressAsDefault}">
+								<span class="text-danger">[Default]</span>
+							</th:block>
+
+							<th:block th:unless="${usePrimaryAddressAsDefault}">
+								<a th:href="@{'/address_book/default/0'}">[Set as default]</a>
+							</th:block>
 						</div>
 						<div class="col">
 							<div class="float-end">
@@ -41,6 +48,14 @@
 					<div class="row">
 						<div class="col">
 							<b>Address #[[${status.count + 1}]]</b>
+							<th:block th:if="${address.defaultForShipping}">
+								<span class="text-danger">[Default]</span>
+							</th:block>
+
+							<th:block th:unless="${address.defaultForShipping}">
+								<a th:href="@{'/address_book/default/' + ${address.id}}">[Set as default]</a>
+							</th:block>
+
 						</div>
 						<div class="col">
 							<div class="float-end">
