--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/register/register_form.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/register/register_form.html
@@ -15,7 +15,7 @@
 		onsubmit="return checkEmailUnique(this);">
 	<div class="border border-secondary rounded p-3">
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">First Name:</label>
+			<label class="col-sm-4">First Name:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{firstName}" class="form-control"
 					required="required" maxlength="45" minlength="2" />
@@ -23,7 +23,7 @@
 		</div>
 		
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Last Name:</label>
+			<label class="col-sm-4">Last Name:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{lastName}" class="form-control"
 					required="required" maxlength="45" minlength="2" />
@@ -31,7 +31,7 @@
 		</div>
 				
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">E-mail:</label>
+			<label class="col-sm-4">E-mail:</label>
 			<div class="col-sm-8">
 				<input type="email" th:field="*{email}" class="form-control"
 					required="required" maxlength="45" minlength="8" />
@@ -39,7 +39,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Password:</label>
+			<label class="col-sm-4">Password:</label>
 			<div class="col-sm-8">
 				<input type="password" th:field="*{password}" class="form-control"
 					required="required" maxlength="15" minlength="6"
@@ -48,7 +48,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Re-type Password:</label>
+			<label class="col-sm-4">Re-type Password:</label>
 			<div class="col-sm-8">
 				<input type="password" id="confirmPassword" class="form-control"
 					required="required" maxlength="15" minlength="6"
@@ -58,7 +58,7 @@
 		</div>
 		
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Phone Number:</label>
+			<label class="col-sm-4">Phone Number:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{phoneNumber}" class="form-control"
 					required="required" maxlength="15" minlength="8" />
@@ -66,7 +66,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Address Line 1:</label>
+			<label class="col-sm-4">Address Line 1:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{addressLine1}" class="form-control"
 					required="required" maxlength="64" minlength="3" />
@@ -74,7 +74,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Address Line 2:</label>
+			<label class="col-sm-4">Address Line 2:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{addressLine2}" class="form-control"
 					maxlength="64" />
@@ -82,7 +82,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">City:</label>
+			<label class="col-sm-4">City:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{city}" class="form-control"
 					maxlength="45" minlength="2" />
@@ -90,7 +90,7 @@
 		</div>
 
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Country:</label>
+			<label class="col-sm-4">Country:</label>
 			<div class="col-sm-8">
 				<select class="form-control" th:field="*{country}">
 					<th:block th:each="country : ${listCountries}">
@@ -101,7 +101,7 @@
 		</div>
 				
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">State/Province:</label>
+			<label class="col-sm-4">State/Province:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{state}" class="form-control"
 					maxlength="45" minlength="3" list="listStates"  />
@@ -110,7 +110,7 @@
 		</div>
 								
 		<div class="input-group row p-2">
-			<label class="col-sm-4 col-form-label">Postal Code:</label>
+			<label class="col-sm-4">Postal Code:</label>
 			<div class="col-sm-8">
 				<input type="text" th:field="*{postalCode}" class="form-control"
 					maxlength="10" minlength="2" />
