code customer checkout using Paypal or COD

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/settings.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings/settings.html
@@ -8,7 +8,7 @@
 		<h2>Site Settings</h2>	
 	</div>
 			
-	<div th:if="${message != null}" class="alert alert-success text-center">
+	<div id="messageBlock" th:if="${message != null}" class="alert alert-success text-center">
 		[[${message}]]
 	</div>
 					
@@ -28,7 +28,10 @@
 		  </li>
 		  <li class="nav-item">
 		    <a class="nav-link" data-bs-toggle="tab" href="#mailTemplates" role="tab">Mail Templates</a>
-		  </li>		  
+		  </li>
+			<li class="nav-item">
+				<a class="nav-link" data-bs-toggle="tab" href="#payment" role="tab">Payment</a>
+			</li>
 		</ul>
 		
 		<div class="tab-content">
@@ -47,6 +50,9 @@
 		  <div class="tab-pane p-3" id="mailTemplates" role="tabpanel">
 		  	<div th:replace="settings/mail_templates/mail_templates :: content"></div>
 		  </div>
+			<div class="tab-pane p-3" id="payment" role="tabpanel">
+				<div th:replace="settings/payment :: content"></div>
+			</div>
 		 </div>
 	</div>
 
@@ -72,6 +78,7 @@
 
 	$(document).ready(function() {
 		$("#customerVerificationContent").richText();
+		$("#orderConfirmationContent").richText({height: 400});
 	});
 
 </script>
