--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/address_book/address_form.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/address_book/address_form.html
@@ -14,7 +14,8 @@
 	<form th:action="@{/address_book/save}" method="post" th:object="${address}"
 		style="max-width: 600px; margin: 0 auto">
 		<input type="hidden" th:field="*{id}" />
-		<input type="hidden" th:field="*{defaultForShipping}" />	
+		<input type="hidden" th:field="*{defaultForShipping}" />
+		<input type="hidden" name="redirect" th:value="${param.redirect}" />
 	<div class="border border-secondary rounded p-3">			
 		<div class="input-group row p-2">
 			<label class="col-sm-4">First Name:</label>
